profilelist1exp/unpackaged/objects/Sponsoring_Distributor__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Sponsoring Distributors</relationshipLabel>
        <relationshipName>Sponsoring_Distributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Translated_Sponsoring_Distributor__c</fullName>
        <label>Translated Sponsoring Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sponsoring Distributor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sponsoring Distributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsoring Distributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>